src/hdfs3_bindings.rs

extern "C" {
    #[doc = " hdfsExists - Checks if a given path exsits on the filesystem"]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path to look for"]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsExists(fs: hdfsFS, path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsSeek - Seek to given offset in file."]
    #[doc = " This works only for files opened in read-only mode."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @param desiredPos Offset into the file to seek into."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsSeek(fs: hdfsFS, file: hdfsFile, desiredPos: tOffset) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsTell - Get the current offset in the file, in bytes."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @return Current offset, -1 on error."]
    pub fn hdfsTell(fs: hdfsFS, file: hdfsFile) -> tOffset;
}
extern "C" {
    #[doc = " hdfsRead - Read data from an open file."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @param buffer The buffer to copy read bytes into."]
    #[doc = " @param length The length of the buffer."]
    #[doc = " @return      On success, a positive number indicating how many bytes"]
    #[doc = "              were read."]
    #[doc = "              On end-of-file, 0."]
    #[doc = "              On error, -1.  Errno will be set to the error code."]
    #[doc = "              Just like the POSIX read function, hdfsRead will return -1"]
    #[doc = "              and set errno to EINTR if data is temporarily unavailable,"]
    #[doc = "              but we are not yet at the end of the file."]
    pub fn hdfsRead(
        fs: hdfsFS,
        file: hdfsFile,
        buffer: *mut ::std::os::raw::c_void,
        length: tSize,
    ) -> tSize;
}
extern "C" {
    #[doc = " hdfsWrite - Write data into an open file."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @param buffer The data."]
    #[doc = " @param length The no. of bytes to write."]
    #[doc = " @return Returns the number of bytes written, -1 on error."]
    pub fn hdfsWrite(
        fs: hdfsFS,
        file: hdfsFile,
        buffer: *const ::std::os::raw::c_void,
        length: tSize,
    ) -> tSize;
}
extern "C" {
    #[doc = " hdfsWrite - Flush the data."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsFlush(fs: hdfsFS, file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsHFlush - Flush out the data in client's user buffer. After the"]
    #[doc = " return of this call, new readers will see the data."]
    #[doc = " @param fs configured filesystem handle"]
    #[doc = " @param file file handle"]
    #[doc = " @return 0 on success, -1 on error and sets errno"]
    pub fn hdfsHFlush(fs: hdfsFS, file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsSync - Flush out and sync the data in client's user buffer. After the"]
    #[doc = " return of this call, new readers will see the data."]
    #[doc = " @param fs configured filesystem handle"]
    #[doc = " @param file file handle"]
    #[doc = " @return 0 on success, -1 on error and sets errno"]
    pub fn hdfsSync(fs: hdfsFS, file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsAvailable - Number of bytes that can be read from this"]
    #[doc = " input stream without blocking."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param file The file handle."]
    #[doc = " @return Returns available bytes; -1 on error."]
    pub fn hdfsAvailable(fs: hdfsFS, file: hdfsFile) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsCopy - Copy file from one filesystem to another."]
    #[doc = " @param srcFS The handle to source filesystem."]
    #[doc = " @param src The path of source file."]
    #[doc = " @param dstFS The handle to destination filesystem."]
    #[doc = " @param dst The path of destination file."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsCopy(
        srcFS: hdfsFS,
        src: *const ::std::os::raw::c_char,
        dstFS: hdfsFS,
        dst: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsMove - Move file from one filesystem to another."]
    #[doc = " @param srcFS The handle to source filesystem."]
    #[doc = " @param src The path of source file."]
    #[doc = " @param dstFS The handle to destination filesystem."]
    #[doc = " @param dst The path of destination file."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsMove(
        srcFS: hdfsFS,
        src: *const ::std::os::raw::c_char,
        dstFS: hdfsFS,
        dst: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsDelete - Delete file."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the file."]
    #[doc = " @param recursive if path is a directory and set to"]
    #[doc = " non-zero, the directory is deleted else throws an exception. In"]
    #[doc = " case of a file the recursive argument is irrelevant."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsDelete(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        recursive: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsRename - Rename file."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param oldPath The path of the source file."]
    #[doc = " @param newPath The path of the destination file."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsRename(
        fs: hdfsFS,
        oldPath: *const ::std::os::raw::c_char,
        newPath: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsGetWorkingDirectory - Get the current working directory for"]
    #[doc = " the given filesystem."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param buffer The user-buffer to copy path of cwd into."]
    #[doc = " @param bufferSize The length of user-buffer."]
    #[doc = " @return Returns buffer, NULL on error."]
    pub fn hdfsGetWorkingDirectory(
        fs: hdfsFS,
        buffer: *mut ::std::os::raw::c_char,
        bufferSize: size_t,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " hdfsSetWorkingDirectory - Set the working directory. All relative"]
    #[doc = " paths will be resolved relative to it."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the new 'cwd'."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsSetWorkingDirectory(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsCreateDirectory - Make the given file and all non-existent"]
    #[doc = " parents into directories."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the directory."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsCreateDirectory(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsSetReplication - Set the replication of the specified"]
    #[doc = " file to the supplied value"]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the file."]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsSetReplication(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        replication: i16,
    ) -> ::std::os::raw::c_int;
}
#[doc = " hdfsEncryptionZoneInfo- Information about an encryption zone."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hdfsEncryptionZoneInfo {
    pub mSuite: ::std::os::raw::c_int,
    pub mCryptoProtocolVersion: ::std::os::raw::c_int,
    pub mId: i64,
    pub mPath: *mut ::std::os::raw::c_char,
    pub mKeyName: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_hdfsEncryptionZoneInfo() {
    assert_eq!(
        ::std::mem::size_of::<hdfsEncryptionZoneInfo>(),
        32usize,
        concat!("Size of: ", stringify!(hdfsEncryptionZoneInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<hdfsEncryptionZoneInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(hdfsEncryptionZoneInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionZoneInfo>())).mSuite as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionZoneInfo),
            "::",
            stringify!(mSuite)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<hdfsEncryptionZoneInfo>())).mCryptoProtocolVersion as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionZoneInfo),
            "::",
            stringify!(mCryptoProtocolVersion)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionZoneInfo>())).mId as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionZoneInfo),
            "::",
            stringify!(mId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionZoneInfo>())).mPath as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionZoneInfo),
            "::",
            stringify!(mPath)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<hdfsEncryptionZoneInfo>())).mKeyName as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(hdfsEncryptionZoneInfo),
            "::",
            stringify!(mKeyName)
        )
    );
}
#[doc = " hdfsEncryptionFileInfo - Information about an encryption file/directory."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hdfsEncryptionFileInfo {
    pub mSuite: ::std::os::raw::c_int,
    pub mCryptoProtocolVersion: ::std::os::raw::c_int,
    pub mKey: *mut ::std::os::raw::c_char,
    pub mKeyName: *mut ::std::os::raw::c_char,
    pub mIv: *mut ::std::os::raw::c_char,
    pub mEzKeyVersionName: *mut ::std::os::raw::c_char,
}
